k8s-deployments/aggregator-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregator-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aggregator-service
  template:
    metadata:
      labels:
        app: aggregator-service
    spec:
      containers:
        - name: aggregator-service
          image: 983075089420.dkr.ecr.ap-south-1.amazonaws.com/aggregator-service:latest
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: aggregator-service
spec:
  selector:
    app: aggregator-service
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
