k8s-deployments/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  type: NodePort
  ports:
  - port: 3000
  selector:
    app: api-gateway
