k8s-deployments/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: 983075089420.dkr.ecr.ap-south-1.amazonaws.com/notification-service:latest
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
  type: ClusterIP
